# ZEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_zh.md  ReleaseNotes.md
cmake/: ShaderCompile.cmake
engine/: CMakeLists.txt
engine/asset/global/: particle.global.json
engine/configs/deployment/: ZEditor.ini
engine/configs/development/: ZentiaEditor.ini
engine/shader/: CMakeLists.txt
engine/shader/glsl/: particle_emit.comp
engine/source/editor/: CMakeLists.txt
engine/source/editor/ConsoleWindow/: ConsoleWindow.cpp
engine/source/editor/EditorFramework/Factories/: AssetFactoryInterface.h
engine/source/editor/Factories/: ActorFactory.cpp  ActorFactory.h  ActorFactoryDirectionalLight.h
engine/source/editor/console_window/: console_window.cpp  console_window.h
engine/source/editor/include/: axis.h  editor.h  editor_file_service.h  editor_global_context.h  editor_input_manager.h  editor_scene_manager.h  editor_ui.h
engine/source/editor/level_editor/: level_editor_create_actor_menu.cpp  level_editor_create_actor_menu.h  level_editor_menu_context.h
engine/source/editor/platform/interface/: gui_view.h
engine/source/editor/platform/windows/: gui_view.cpp
engine/source/editor/resource/: ZentiaEditor.rc
engine/source/editor/source/: axis.cpp  editor.cpp  editor_file_service.cpp  editor_global_context.cpp  editor_input_manager.cpp  editor_scene_manager.cpp  editor_ui.cpp  main.cpp
engine/source/editor/tools_menus/: tool_menu.h  tool_menu_entry.cpp  tool_menu_enty.h  tool_menu_section.cpp  tool_menu_section.h
engine/source/meta_parser/: CMakeLists.txt
engine/source/meta_parser/parser/language_types/: class.cpp  field.cpp
engine/source/modules/imgui/: CMakeLists.txt  event.cpp  event.h  gui_utility.cpp  gui_utility.h
engine/source/precompile/: precompile.cmake  precompile.json.in
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/CoreUObject/Templates/: SubclassOf.h
engine/source/runtime/CoreUObject/UObject/: Class.h  Field.cpp  Field.h  NameTypes.h  Obj.cpp  Object.h  ObjectMacros.h  ObjectPtr.h  Package.h  RemoteObjectTypes.h  UObjectBase.h  UObjectBaseUtility.h  UObjectGlobals.cpp  UObjectGlobals.h  UnrealNames.h  UnrealNames.inl
engine/source/runtime/Engine/: DirectionalLight.h  Light.h
engine/source/runtime/Engine/Components/: DirectionalLightComponent.h
engine/source/runtime/core/Delegates/: DelegateBase.h  DelegateSignatureImpl.h  IDelegateInstance.h
engine/source/runtime/core/GenericPlatform/: GenericPlatform.h
engine/source/runtime/core/HAL/: Platform.h
engine/source/runtime/core/Misc/: EnumClassFlags.h
engine/source/runtime/core/Serialization/: Archive.h  StructuredArchive.h  StructuredArchiveSlotBase.h
engine/source/runtime/core/Templates/: TypeCompatibleBytes.h
engine/source/runtime/core/Windows/: WindowsPlatform.h
engine/source/runtime/core/color/: color.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  math.cpp  math.h  math_headers.h  math_marcos.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  random.h  transform.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
engine/source/runtime/core/memory/: memory_manager.cpp  memory_manager.h
engine/source/runtime/core/meta/: meta_example.cpp  meta_example.h
engine/source/runtime/function/animation/: animation_loader.cpp  animation_loader.h  animation_system.cpp  animation_system.h  node.cpp  node.h  skeleton.cpp  skeleton.h  utilities.cpp  utilities.h
engine/source/runtime/function/character/: character.cpp  character.h
engine/source/runtime/function/controller/: character_controller.cpp  character_controller.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/input/: input_system.cpp  input_system.h
engine/source/runtime/function/particle/: emitter_id_allocator.h  (+5 more)
engine/source/runtime/misc/: input_event.h
engine/template/: allReflectionFile.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
(+151 files in other folders)
